--- a/set.html
+++ b/set.html
@@ -10,7 +10,7 @@
 
     // Retrieve 'token' and 'style' (or 'gridStyle') from the URL
     const token = getQueryParam('token');
-    const gridStyle = getQueryParam('style') || getQueryParam('gridStyle'); // Handle both 'style' and 'gridStyle'
+    let gridStyle = getQueryParam('style') || getQueryParam('gridStyle'); // Handle both 'style' and 'gridStyle'
 
     // If a token is found, set it in localStorage
     if (token) {
@@ -20,10 +20,19 @@
       console.log('No token found in URL.');
     }
 
-    // If a gridStyle (or style) is found, set it in localStorage
+    // Apply the conditional logic for gridStyle
+    if (gridStyle == '1') {
+      gridStyle = 'grid1';
+    }
+    if (gridStyle == '3') {
+      gridStyle = 'grid3';
+    }
+    if (gridStyle !== 'grid1' && gridStyle !== 'grid3') {
+      gridStyle = 'grid3'; // Default to grid3 if it's neither grid1 nor grid3
+    }
+
+    // If a gridStyle is found, set it in localStorage
     if (gridStyle) {
-        if (gridStyle==1){gridStyle=grid1;}
-        if (gridStyle==3){gridStyle=grid3;}
       localStorage.setItem('gridStyle', gridStyle);
       console.log('Grid style set in localStorage:', gridStyle);
     } else {
