--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <style>
 #snackbar-container {
   position: fixed;
-  bottom: 30px;
+  bottom: 50px;
   left: 50%;
-  transform: translateX(-50%);
   z-index: 1;
 }
 
@@ -31,29 +30,14 @@
 
 .snackbar.show {
   visibility: visible;
-  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  animation: fadein 0.5s, fadeout 0.5s 2.5s;
-}
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 1.0s;
+  animation: fadein 0.5s, fadeout 0.5s 1.0s;
+  }
 
-@-webkit-keyframes fadein {
-  from {bottom: 0; opacity: 0;} 
-  to {bottom: 30px; opacity: 1;}
-}
-
-@keyframes fadein {
-  from {bottom: 0; opacity: 0;}
-  to {bottom: 30px; opacity: 1;}
-}
-
-@-webkit-keyframes fadeout {
-  from {bottom: 30px; opacity: 1;} 
-  to {bottom: 0; opacity: 0;}
-}
-
-@keyframes fadeout {
-  from {bottom: 30px; opacity: 1;}
-  to {bottom: 0; opacity: 0;}
-}
+@-webkit-keyframes fadein {  from {bottom: 0; opacity: 0;}   to {bottom: 0; opacity: 1;}}
+@keyframes fadein {  from {bottom: 0; opacity: 0;}  to {bottom: 0; opacity: 1;}}
+@-webkit-keyframes fadeout {  from {bottom: 0; opacity: 1;}   to {bottom: 0; opacity: 0;}}
+@keyframes fadeout {  from {bottom: 0; opacity: 1;}  to {bottom: 0; opacity: 0;}}
 </style>
 
 
@@ -63,6 +47,34 @@
     .led-button { color: white; font-weight: bold; white-space: normal; font-size: 17px; word-wrap:anywhere; padding: 17px; box-sizing: border-box; display: none; max-width: auto; background-color: green; border-radius: 0px;}
     #value { display: none; }.
 </style>
+
+
+
+<script>
+function popup() {
+  // Create a new snackbar element
+  var snackbar = document.createElement("div");
+  snackbar.className = "snackbar";
+  snackbar.innerText = "Command Sent Successfully";
+
+  // Append the snackbar to the container
+  var container = document.getElementById("snackbar-container");
+  container.appendChild(snackbar);
+
+  // Show the snackbar with animation
+  setTimeout(function() {
+    snackbar.className = "snackbar show";
+  }, 10); // Slight delay to trigger the animation
+  
+  // Hide the snackbar after 3 seconds
+  setTimeout(function() {
+    snackbar.className = "snackbar";
+    container.removeChild(snackbar);
+  }, 1500); // 3500ms to match the fade-out timing
+}
+</script>
+
+
 
 <script>
 var server = "sgp1";
@@ -392,32 +404,6 @@ function NameSwitch2(value){
                     document.getElementById("led32").innerText = Sw32;
                     }        
 </script>
-
-
-<script>
-function popup() {
-  // Create a new snackbar element
-  var snackbar = document.createElement("div");
-  snackbar.className = "snackbar";
-  snackbar.innerText = "Command Sent Successfully";
-
-  // Append the snackbar to the container
-  var container = document.getElementById("snackbar-container");
-  container.appendChild(snackbar);
-
-  // Show the snackbar with animation
-  setTimeout(function() {
-    snackbar.className = "snackbar show";
-  }, 10); // Slight delay to trigger the animation
-  
-  // Hide the snackbar after 3 seconds
-  setTimeout(function() {
-    snackbar.className = "snackbar";
-    container.removeChild(snackbar);
-  }, 3500); // 3500ms to match the fade-out timing
-}
-</script>
-
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
